--- a/build.gradle
+++ b/build.gradle
@@ -19,4 +19,8 @@ repositories {
 dependencies {
     compile 'net.dv8tion:JDA:3.5.0_329'
     compile 'com.jagrosh:jda-utilities:2.0'
+    compile 'com.google.oauth-client:google-oauth-client-jetty:1.23.0'
+    compile 'com.google.apis:google-api-services-gmail:v1-rev83-1.23.0'
+    compile 'com.google.api-client:google-api-client:1.30.5'
+
 }
