--- a/build.gradle
+++ b/build.gradle
@@ -17,10 +17,11 @@ repositories {
 }
 
 dependencies {
-    compile 'net.dv8tion:JDA:3.5.0_329'
-    compile 'com.jagrosh:jda-utilities:2.0'
+    compile 'net.dv8tion:JDA:4.1.0_95'
+    compile 'com.jagrosh:jda-utilities:3.0.2'
     compile 'com.google.oauth-client:google-oauth-client-jetty:1.23.0'
     compile 'com.google.apis:google-api-services-gmail:v1-rev83-1.23.0'
     compile 'com.google.api-client:google-api-client:1.30.5'
-
+    compile 'com.googlecode.json-simple:json-simple:1.1.1'
+    implementation 'com.google.code.gson:gson:2.8.6'
 }
