Restructured configurations, improved event announcement command, improved command argument structuring, added ability to edit posted bot message, what am i doing with my life

--- a/ext-config.json
+++ b/ext-config.json
@@ -92,5 +92,10 @@
   }],
   "message-filters": [{
     "filter": "[\\n]+--.+"
+  }],
+  "restricted-mentions": [{
+    "id": "663138202038566924"
+  },{
+    "id": "664312127393234945"
   }]
 }
