Stability and mode command improvements.

--- a/ext-config.json
+++ b/ext-config.json
@@ -113,7 +113,7 @@
   ],
   "message-filters": [
     {
-      "filter": "[\\n]+--.+"
+      "filter": "\n+--.+"
     }
   ],
   "restricted-mentions": [
