--- a/ext-config.json
+++ b/ext-config.json
@@ -113,6 +113,9 @@
   ],
   "message-filters": [
     {
+      "filter": "On [a-zA-Z]{3}, [a-zA-Z]{3} \\d{1,2}, \\d{4} at \\d{1,2}:\\d{1,2} (?:AM|PM) .+<[a-zA-Z0-9\\.\\+\\-_\\s]+@[a-zA-Z0-9\\.\\-@]+> wrote:.+"
+    },
+    {
       "filter": "\n+--.+"
     }
   ],
