Added ability to set timezone for email notification footers.

--- a/ext-config.json
+++ b/ext-config.json
@@ -108,7 +108,7 @@
       "to": "first857-l@mtu.edu"
     },
     {
-      "to": "857api.debug.auth2508v22@mail.goobisoft.com"
+      "to": "857api.direct@mail.goobisoft.com"
     }
   ],
   "message-filters": [
