--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ plugins {
 mainClassName = "us.jacobdixon.discord.Main"
 
 group '857-discord-bot'
-version '1.0-SNAPSHOT'
+version '1.0a'
 
 sourceCompatibility = 1.8
 
