Various email announcement improvements.

--- a/ext-config.json
+++ b/ext-config.json
@@ -26,6 +26,10 @@
       "name": "Jacob Dixon",
       "address": "jd@jacobdixon.us",
       "img-url": "https://www.jacobdixon.us/cache/res/unnamed.png"
+    },{
+      "name": "Jacob Dixon",
+      "address": "jacobdixon001@gmail.com",
+      "img-url": "https://www.jacobdixon.us/cache/res/unnamed.png"
     },
     {
       "name": "Christopher Doig",
