--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,8 @@
 plugins {
     id 'java'
     id 'application'
-    id 'com.github.johnrengelman.shadow' version '4.0.2'
+    id 'com.github.johnrengelman.shadow' version '5.2.0'
 }
-
-mainClassName = "us.jacobdixon.discord.Main"
 
 group '857-discord-bot'
 version '1.0a'
@@ -17,16 +15,16 @@ repositories {
 }
 
 dependencies {
-    compile 'net.dv8tion:JDA:4.1.1_108'
+    compile 'net.dv8tion:JDA:4.1.1_122'
     compile 'com.jagrosh:jda-utilities:3.0.2'
+    compile 'com.googlecode.json-simple:json-simple:1.1.1'
+
+    compile 'com.google.api-client:google-api-client:1.23.0'
     compile 'com.google.oauth-client:google-oauth-client-jetty:1.23.0'
     compile 'com.google.apis:google-api-services-gmail:v1-rev83-1.23.0'
-    compile 'com.google.api-client:google-api-client:1.30.5'
-    compile 'com.googlecode.json-simple:json-simple:1.1.1'
-    /*compile (
-            [group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.10.0'],
-            [group: 'com.fasterxml.jackson.core', name: 'jackson-annotations', version: '2.10.0'],
-            [group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.10.0']
-    )*/
-    implementation 'com.google.code.gson:gson:2.8.6'
+
+    compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.0'
+
+    implementation("com.google.code.gson:gson:2.8.6")
+    implementation("com.google.guava:guava:28.2-jre")
 }
